<resources>
    <!--    project title-->
    <string name="app_name">Project Food Picker</string>

    <!--    activity_preferences.xml text-->
    <string name="prefs_txtvw_food_type">Food Type</string>
    <string name="prefs_edtxt_food_type_hint">\"Chinese\"</string>
    <string name="prefs_txtvw_rating">Rating (min)</string>
    <string name="prefs_txtvw_pricing">Price (max)</string>
    <string name="prefs_txtvw_distance">Search radius</string>
    <string name="prefs_txtvw_open_now">Is open now</string>
    <string name="prefs_txtvw_allow_prominent">Allow prominent</string>
    <string name="prefs_btn_search">Search</string>
    <string name="prefs_btn_setting">Settings</string>
    <string name="prefs_btn_gethistory">History</string>

    <!--    restaurant_card.xml text-->
    <string name="restcard_txtvw_hours">Opening Hours</string>
    <string name="restcard_txtvw_hours_label">
        Sun:\nMon:\nTue:\nWed:\nThu:\nFri:\nSat:
    </string>
    <string name="restcard_txtvw_hours_placeholder">
        12:00AM - 12:00PM\n12:00AM - 12:00PM\n12:00AM - 12:00PM\n12:00AM - 12:00PM\n12:00AM - 12:00PM\n12:00AM - 12:00PM\n12:00AM - 12:00PM
    </string>
    <string name="restcard_txtvw_addr_placeholder">
        123 NE 123th Street\nCity, State, ZipCode
    </string>
    <string name="restcard_open_now_placeholder">Open Now!</string>
    <string name="restcard_distance_placeholder">20.22 miles</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- settings_activity.xml text -->
    <string name="setting_txtvw_theme">Theme</string>
    <string name="setting_txtvw_general">General</string>
    <string name="setting_txtvw_distance_margin">Error margin</string>
    <string name="setting_txtvw_distance_margin_placeholder">55%</string>
    <string name="setting_btn_apply">Apply</string>

    <!-- shared preferences key -->
    <string name="sp_theme">theme_key</string>
    <string name="sp_allow_prominent">allow_prominent</string>
    <string name="sp_distance_margin">distance_margin</string>
    <string name="sp_previously_accessed_json">previously_accessed_json</string>
    <string name="sp_date">date</string>
    <string name="sp_month">month</string>
    <string name="sp_year">year</string>
    <string name="sp_remained_rerolls">remained_rerolls</string>

    <!--    restaurant_card.xml default values-->
    <string name="restcard_default_name">Restaurant Name</string>
    <string name="restcard_default_rating">Rating (total)</string>
    <string name="restcard_default_pricing">Pricing</string>
    <string name="restcard_default_address">123 Example St,\nCity, State ZipCode</string>
    <string name="restcard_default_phone_number">(123)456 7890</string>
    <string name="restcard_default_website">Website</string>
    <string name="restcard_default_hours">Restaurant weekdayTextConcatenated</string>

    <!--    restaurant_card_finder values-->
    <string name="restcardfinder_default_load_txt">loading restaurants&#8230;</string>
    <string name="restcard_finder_no_more_restaurants">
        It seems you have ran out of restaurants matching your preferences.
    </string>
    <string name="restcard_finder_no_restaurants">
        There are no restaurants matching your preferences.
    </string>
    <string name="restcard_finder_no_rolls">
        You are out of rolls.
    </string>

    <!-- history_info.xml text -->
    <string name="historycard_btn_get_info">Get More Info</string>
</resources>
