<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restcard_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtvw_hours_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/restcard_contents_padding_top_hours"
            android:text="@string/restcard_txtvw_hours"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hours_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_hours_label">

            <TextView
                android:id="@+id/txtvw_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/restcard_txtvw_hours_label"
                android:textSize="@dimen/font_size_restaurant_text"
                app:layout_constraintEnd_toStartOf="@+id/txtvw_hours_values"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtvw_hours_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restcard_txtvw_hours_placeholder"
                android:textSize="@dimen/font_size_restaurant_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtvw_hours"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtvw_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/restcard_default_rating"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hours_layout" />

        <TextView
            android:id="@+id/txtvw_price_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/restcard_default_pricing"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_text"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_rating"
            app:layout_constraintStart_toStartOf="@+id/txtvw_rating"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_rating" />

        <TextView
            android:id="@+id/txtvw_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/restcard_txtvw_addr_placeholder"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_text"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_price_level"
            app:layout_constraintStart_toStartOf="@+id/txtvw_price_level"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_price_level" />

        <TextView
            android:id="@+id/txtvw_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/restcard_default_phone_number"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_text"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_address"
            app:layout_constraintStart_toStartOf="@+id/txtvw_address"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_address" />

        <TextView
            android:id="@+id/txtvw_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/restcard_contents_padding_top_hours"
            android:text="@string/restcard_default_website"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_restaurant_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_phone_number"
            app:layout_constraintStart_toStartOf="@+id/txtvw_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>