<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgvw_title_restaurant"
            android:layout_width="match_parent"
            android:layout_height="@dimen/restcard_img_height"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txtvw_title_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="450dp"
            android:fontFamily="sans-serif"
            android:text="@string/restcard_distance_placeholder"
            android:textSize="@dimen/font_size_pref_main" />

        <TextView
            android:id="@+id/txtvw_title_open_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/restcard_open_now_placeholder"
            android:textSize="@dimen/font_size_pref_main" />

        <TextView
            android:id="@+id/txtvw_title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/restcard_default_name"
            android:textSize="@dimen/font_size_restaurant_title_name_text" />

        <Button
            android:id="@+id/hiscard_btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closePopUpWindown"
            android:text="Button" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>