<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtvw_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/setting_txtvw_theme"
        android:textSize="@dimen/font_size_pref_main"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintStart_toStartOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Spinner
        android:id="@+id/spin_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/theme_entries"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_theme"
        app:layout_constraintStart_toStartOf="@+id/txtvw_theme"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_theme" />

    <TextView
        android:id="@+id/txtvw_allow_prominent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/prefs_txtvw_allow_prominent"
        android:textSize="@dimen/font_size_pref_main"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_sec_pref_section" />

    <Switch
        android:id="@+id/toggle_allow_prominent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtvw_allow_prominent"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vertical50"
        app:layout_constraintTop_toTopOf="@+id/txtvw_allow_prominent" />

    <TextView
        android:id="@+id/txtvw_distance_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_txtvw_distance_margin"
        android:textSize="@dimen/font_size_pref_main"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_allow_prominent"
        app:layout_constraintStart_toStartOf="@+id/txtvw_allow_prominent"
        app:layout_constraintTop_toBottomOf="@+id/txtvw_allow_prominent" />

    <SeekBar
        android:id="@+id/sbr_distance_margin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:max="11"
        app:layout_constraintBottom_toBottomOf="@+id/txtvw_distance_margin"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintStart_toStartOf="@+id/toggle_allow_prominent"
        app:layout_constraintTop_toTopOf="@+id/txtvw_distance_margin" />

    <Button
        android:id="@+id/btn_apply"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="applySettings"
        android:text="@string/setting_btn_apply"
        android:textSize="@dimen/font_size_pref_main"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_theme"
        app:layout_constraintStart_toStartOf="@+id/txtvw_theme"
        app:layout_constraintTop_toBottomOf="@+id/spin_theme" />

    <TextView
        android:id="@+id/txtvw_sec_pref_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/setting_txtvw_title_sec_pref"
        android:textSize="@dimen/font_size_pref_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintStart_toStartOf="@+id/txtvw_sec_pref_section"
        app:layout_constraintTop_toBottomOf="@+id/sbr_distance_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>