<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restcard_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restcard_contents_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgvw_title_restaurant"
            android:layout_width="0dp"
            android:layout_height="@dimen/restcard_img_height"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txtvw_title_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/restcard_default_name"
            android:textSize="@dimen/font_size_restaurant_title_name_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgvw_title_restaurant"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtvw_title_open_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/restcard_open_now_placeholder"
            android:textSize="@dimen/font_size_pref_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vertical55"
            app:layout_constraintStart_toStartOf="@+id/txtvw_title_name"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_title_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtvw_title_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/restcard_distance_placeholder"
            android:textSize="@dimen/font_size_pref_main"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtvw_title_open_now"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_title_name"
            app:layout_constraintStart_toStartOf="@+id/vertical55" />


        <me.nakukibo.projectfoodpicker.RestaurantCardContents
            android:id="@+id/restcard_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/txtvw_title_distance"
            app:layout_constraintStart_toStartOf="@+id/txtvw_title_open_now"
            app:layout_constraintTop_toBottomOf="@+id/txtvw_title_open_now">

        </me.nakukibo.projectfoodpicker.RestaurantCardContents>

        <View
            android:id="@+id/view_last_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgvw_title_restaurant"
            app:layout_constraintEnd_toStartOf="@+id/vertical55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgvw_title_restaurant" />

        <View
            android:id="@+id/view_next_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgvw_title_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertical55"
            app:layout_constraintTop_toTopOf="@+id/imgvw_title_restaurant" />

        <View
            android:id="@+id/view_open_contents"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="openImage"
            app:layout_constraintBottom_toBottomOf="@+id/txtvw_title_open_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgvw_title_restaurant"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>